custom nuget package, prerelease/release

--- a/source/BigStar.RazorPageApp/BigStar.RazorPageApp.csproj
+++ b/source/BigStar.RazorPageApp/BigStar.RazorPageApp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BigStarCollectibles.ColorLib" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BigStar.ColorLib\BigStar.ColorLib.csproj" />
   </ItemGroup>
 
