--- a/source/BigStar.ColorLib/BigStar.ColorLib.csproj
+++ b/source/BigStar.ColorLib/BigStar.ColorLib.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.7.0-experimental</Version>
+    <Version>1.1.0</Version>
     <Company>Big Star Collectibles</Company>
     <PackageId>BigStarCollectibles.ColorLib</PackageId>
     <Authors>Walt Ritscher, Terry Dactill</Authors>
