--- a/source/TinyConsole.Core/TinyConsole.Core.csproj
+++ b/source/TinyConsole.Core/TinyConsole.Core.csproj
@@ -10,13 +10,13 @@
 		<!--<PackageReference Include="AutoMapper" Version="*" />-->
 
 		<!-- The highest stable version that matches the pattern -->
-		<!--<PackageReference Include="AutoMapper" Version="6.2.*" />-->
+		<!--<PackageReference Include="AutoMapper" Version="8.1.*" />-->
 
 		<!-- The highest stable or prerelease version that matches the pattern -->
 		<!--<PackageReference Include="AutoMapper" Version="7.0-*" />-->
 
 		<!-- Specify a range, resolves to the smallest number -->
-		<!--<PackageReference Include="AutoMapper" Version="[8.1,10.0]" />-->
+		<PackageReference Include="AutoMapper" Version="[8.1,10.0]" />
 
 	</ItemGroup>
 </Project>
